--- a/2D-game/styles.css
+++ b/2D-game/styles.css
@@ -4,14 +4,18 @@
     box-sizing: border-box;
 }
 body{
-    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    background-image: linear-gradient(to left, #48c6ef 0%, #6f86d6 100%);
+}
+.hide{
+    display: none;
 }
 #canvas1{    
-    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+    background: #517bc1;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%;
     max-height: 100%;
+    font-family: 'Rye', cursive;
 }
